--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!--
+File: index.html
+Author: Meggyesi Réka
+Copyright: 2023, Meggyesi Réka
+Group: Szoft I/1/E
+Date: 2023-01-31
+Github: https://github.com/meggyesireka/
+Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
